# workflow-link-organizer

./: .gitignore  CLAUDE.md  GET-STARTED.md  README.md  Restart.bat  Start.bat  Stop.bat  pyproject.toml  requirements.txt  setup.ps1
migrations/: 001_initial_schema.sql  002_browser_path_descriptions.sql  003_remove_browser_path_config.sql
src/wlo/: app.py  config.py  logging_setup.py
src/wlo/db/: config_store.py  connection.py  migrations.py
src/wlo/models/: bookmarks.py
src/wlo/sections/: __init__.py
src/wlo/sections/bookmarks/: routes.py  service.py
src/wlo/sections/config/: routes.py
src/wlo/static/: index.html  style.css
src/wlo/static/js/: app.js  bookmarks.js
src/wlo/tray/: tray_app.py
