[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "workflow-link-organizer"
version = "0.1.0"
description = "Profile-aware bookmark manager for organizing links, files, and folders by work context."
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1",
    "waitress>=3.0",
    "pydantic>=2.0",
    "structlog>=23.0",
    "pystray>=0.19",
    "pillow>=10.0",
]

[project.scripts]
wlo = "wlo.tray.tray_app:main"
wlo-dev = "wlo.app:_run_dev"

[tool.setuptools.packages.find]
where = ["src"]

